--- a/detail.html
+++ b/detail.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/LineIcons.3.0.css" />
     <link rel="stylesheet" href="assets/css/animate.css" />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/detail-main.css" />
+    <link rel="stylesheet" href="assets/css/detail-style.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
@@ -103,27 +103,8 @@
     <!-- Start Hero Area -->
     <section class="hero-area">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-8 offset-lg-2 col-md-12 col-12">
-                    <div class="hero-content">
-                        <h2 class="wow fadeInUp mb-lg-5" data-wow-delay=".4s">Don’t miss out! Explore the vibrant events
-                            happening locally and globally.</h2>
-                        <div class="input-group wow fadeInUp" data-wow-delay=".6s">
-                            <span class="input-group-text" id="basic-addon1"><i class="bi bi-search"></i></span>
-                            <input type="text" class="form-control" placeholder="CMU Marathon, Music festival,..."
-                                aria-label="Username" aria-describedby="basic-addon1">
-                            <div class="input-group-text" id="basic-addon1">
-                                <i class="bi bi-geo-alt"></i>
-                                <select class="form-select border-0 bg-transparent shadow-none">
-                                    <option selected>Chiand Mai</option>
-                                    <option value="1">One</option>
-                                    <option value="2">Two</option>
-                                    <option value="3">Three</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="thumbnail-container">
+                <img src="./assets/images/thumbnail/thumbnail-1.png" alt="">
             </div>
         </div>
     </section>
@@ -134,36 +115,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="section-title text-start">
-                        <!-- <h3 class="wow zoomIn ms-4" data-wow-delay=".2s">Why join eventGrids?</h3> -->
-                        <h2 class="wow fadeInUp" data-wow-delay=".4s">Explore Categories</h2>
+                    <div class="section-title d-flex justify-content-between" class="wow fadeInUp" data-wow-delay=".4s">
+                        <h1>Sound Of Christmas 2023</h1>
+                        <div>
+                            <i class="bi bi-star-fill h2 me-2"></i>
+                            <i class="bi bi-share-fill h2"></i>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="row text-center">
-                <div class="col-lg-2 col-md-4 col-6 wow fadeInUp" data-wow-delay=".2s">
-                    <div class="category category-1 mx-auto mb-3"></div>
-                    <h5>Entertainment</h5>
-                </div>
-                <div class="col-lg-2 col-md-4 col-6 wow fadeInUp" data-wow-delay=".4s">
-                    <div class="category category-2 mx-auto mb-3"></div>
-                    <h5>Educational & Business</h5>
-                </div>
-                <div class=" col-lg-2 col-md-4 col-6 wow fadeInUp" data-wow-delay=".6s">
-                    <div class="category category-3 mx-auto mb-3"></div>
-                    <h5>Sports & Fitness</h5>
-                </div>
-                <div class="col-lg-2 col-md-4 col-6 wow fadeInUp" data-wow-delay=".2s">
-                    <div class="category category-4 mx-auto mb-3"></div>
-                    <h5>Cultural & Arts</h5>
-                </div>
-                <div class="col-lg-2 col-md-4 col-6 wow fadeInUp" data-wow-delay=".4s">
-                    <div class="category category-5 mx-auto mb-3"></div>
-                    <h5>Technology & Innovation</h5>
-                </div>
-                <div class=" col-lg-2 col-md-4 col-6 wow fadeInUp" data-wow-delay=".6s">
-                    <div class="category category-6 mx-auto mb-3"></div>
-                    <h5>Travel & Adventure</h5>
                 </div>
             </div>
             <div class="row d-none">
