Revert "feat: Implement new pages"
This reverts commit 33dd137016706c27d740252a9d5ad4eb6688cf64.

--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
                                 </ul>
                             </div> <!-- navbar collapse -->
                             <div class="button">
-                                <a href="pricing.html" class="btn"><i class="bi bi-calendar-plus me-2"></i> Create
-                                    Event</i></a>
+                                <a href="pricing.html" class="btn">Get Tickets<i class="lni lni-ticket"></i></a>
                             </div>
                         </nav>
                         <!-- End Navbar -->
