update detail page

--- a/public/detail.html
+++ b/public/detail.html
@@ -145,20 +145,22 @@
                             <div id="event-map"></div>    
                         </div>
                         <div class="col-lg-3">
-                            <div class="button">
-                                <a href="pricing.html" class="btn"><i class="bi bi-ticket-perforated-fill me-2"
-                                        style="transform: rotateZ(-45deg);"></i>Buy
-                                    Tickets</i></a>
+                            <div class="button-group d-flex">
+                                <div class="button me-2">
+                                    <a href="pricing.html" class="btn"><i class="bi bi-ticket-perforated-fill me-2" style="transform: rotateZ(-45deg);"></i>Buy Tickets</a>
+                                </div>
+                                <div class="button">
+                                    <button type="button" id="deleteButton" class="btn btn-danger">Delete</button>
+                                </div>
                             </div>
-                            <h4 class="wow fadeInUp" data-wow-delay=".4s">Ticket Information</h4>
-                            <p><i class="bi bi-ticket-perforated-fill me-2"
-                                    style="transform: rotateZ(-45deg);"></i>Standard Ticket: ₹ 200 each</p>
-
-                            <h4 class="wow fadeInUp" data-wow-delay=".4s">Hosted by</h4>
+                            <h4 class="wow fadeInUp" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">Ticket Information</h4>
+                            <p><i class="bi bi-ticket-perforated-fill me-2" style="transform: rotateZ(-45deg);"></i>Standard Ticket: ₹ 200 each</p>
+                        
+                            <h4 class="wow fadeInUp" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">Hosted by</h4>
                             <div class="d-flex align-items-center gap-2">
                                 <i class="bi bi-person-circle h1"></i>
                                 <div>
-                                    <p id="event-hosted">City Youth Movement</p>
+                                    <p id="event-hosted">Overseeagen</p>
                                     <div>
                                         <button class="btn btn-outline-dark btn-light">Contact</button>
                                         <button class="btn btn-dark">+ Follow</button>
