--- a/public/detail.html
+++ b/public/detail.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="assets/css/animate.css" />
     <link rel="stylesheet" href="assets/css/detail-main.css" />
     <link rel="stylesheet" href="assets/css/detail-style.css" />
+    <link rel="stylesheet" href="assets/css/global-font.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <style>
@@ -135,28 +136,35 @@
                             <p id="event-datetime"><i class="bi bi-calendar-plus me-2"></i>Saturday, 2 December 2023</p>
                             <!-- <p><i class="bi bi-clock me-2"></i>6:30 PM - 9:30 PM</p> -->
                             <h4 class="wow fadeInUp" data-wow-delay=".4s">Location</h4>
-                            <p id="event-location"><i class="bi bi-geo-alt me-2"></i>Bal Gandharva Rang Mandir, Near Junction Of 24th & 32nd
+                            <p id="event-location"><i class="bi bi-geo-alt me-2"></i>Bal Gandharva Rang Mandir, Near
+                                Junction Of 24th & 32nd
                                 Road & Patwardhan Park,Off Linking Road, Bandra West., Mumbai,
                                 India</p>
                             <!-- <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d120866.80545157299!2d98.95647724999998!3d18.79424590000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30da3a7e90bb6f5d%3A0x98d46270a59b4367!2z4LmA4LiX4Lio4Lia4Liy4Lil4LiZ4LiE4Lij4LmA4LiK4Li14Lii4LiH4LmD4Lir4Lih4LmIIOC4reC4s-C5gOC4oOC4reC5gOC4oeC4t-C4reC4h-C5gOC4iuC4teC4ouC4h-C5g-C4q-C4oeC5iCDguYDguIrguLXguKLguIfguYPguKvguKHguYg!5e0!3m2!1sth!2sth!4v1724809474345!5m2!1sth!2sth"
                                 width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                                 referrerpolicy="no-referrer-when-downgrade"></iframe> -->
-                            <div id="event-map"></div>    
+                            <div id="event-map"></div>
                         </div>
                         <div class="col-lg-3">
                             <div class="button-group d-flex">
                                 <div class="button me-2">
-                                    <a href="pricing.html" class="btn"><i class="bi bi-ticket-perforated-fill me-2" style="transform: rotateZ(-45deg);"></i>Buy Tickets</a>
+                                    <a href="pricing.html" class="btn"><i class="bi bi-ticket-perforated-fill me-2"
+                                            style="transform: rotateZ(-45deg);"></i>Buy Tickets</a>
                                 </div>
                                 <div class="button">
                                     <button type="button" id="deleteButton" class="btn btn-danger">Delete</button>
                                 </div>
                             </div>
-                            <h4 class="wow fadeInUp" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">Ticket Information</h4>
-                            <p><i class="bi bi-ticket-perforated-fill me-2" style="transform: rotateZ(-45deg);"></i>Standard Ticket: ₹ 200 each</p>
-                        
-                            <h4 class="wow fadeInUp" data-wow-delay=".4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">Hosted by</h4>
+                            <h4 class="wow fadeInUp" data-wow-delay=".4s"
+                                style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">Ticket
+                                Information</h4>
+                            <p><i class="bi bi-ticket-perforated-fill me-2"
+                                    style="transform: rotateZ(-45deg);"></i>Standard Ticket: ₹ 200 each</p>
+
+                            <h4 class="wow fadeInUp" data-wow-delay=".4s"
+                                style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">Hosted by
+                            </h4>
                             <div class="d-flex align-items-center gap-2">
                                 <i class="bi bi-person-circle h1"></i>
                                 <div>
@@ -171,7 +179,8 @@
                     </div>
                     <div class="section-title">
                         <h4 class="wow fadeInUp" data-wow-delay=".4s">Event Description</h4>
-                        <p id="event-desc">Get ready to kick off the Christmas season in Mumbai with SOUND OF CHRISTMAS - your favourite
+                        <p id="event-desc">Get ready to kick off the Christmas season in Mumbai with SOUND OF CHRISTMAS
+                            - your favourite
                             LIVE Christmas concert!
 
                             City Youth Movement invites you to the 4th edition of our annual Christmas festivities - by
