--- a/public/events.html
+++ b/public/events.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="assets/css/sidebars.css">
     <link rel="stylesheet" href="assets/css/events-main.css" />
     <link rel="stylesheet" href="assets/css/events-style.css" />
+    <link rel="stylesheet" href="assets/css/global-font.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
