update link page and api

--- a/public/detail.html
+++ b/public/detail.html
@@ -61,9 +61,15 @@
                             <div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent">
                                 <ul id="nav" class="navbar-nav ms-auto">
                                     <li class="nav-item">
-                                        <a href="#" class="active" aria-label="Toggle navigation">Home</a>
+                                        <a href="./index.html" class="active" aria-label="Toggle navigation">Home</a>
                                     </li>
                                     <li class="nav-item">
+                                        <a href="./events.html" aria-label="Toggle navigation">Events</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="./create.html" aria-label="Toggle navigation">Create event</a>
+                                    </li>                                      
+                                    <!-- <li class="nav-item">
                                         <a class="dd-menu collapsed" href="javascript:void(0)" data-bs-toggle="collapse"
                                             data-bs-target="#submenu-1-1" aria-controls="navbarSupportedContent"
                                             aria-expanded="false" aria-label="Toggle navigation">Pages</a>
@@ -94,11 +100,11 @@
                                     </li>
                                     <li class="nav-item">
                                         <a href="contact.html" aria-label="Toggle navigation">Contact</a>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </div> <!-- navbar collapse -->
                             <div class="button">
-                                <a href="pricing.html" class="btn"><i class="bi bi-calendar-plus me-2"></i>Create
+                                <a href="./create.html" class="btn"><i class="bi bi-calendar-plus me-2"></i>Create
                                     Event</i></a>
                             </div>
                         </nav>
