--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,12 @@
                                         <a href="#" class="active" aria-label="Toggle navigation">Home</a>
                                     </li>
                                     <li class="nav-item">
+                                        <a href="./events.html" aria-label="Toggle navigation">Events</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="./create.html" aria-label="Toggle navigation">Create event</a>
+                                    </li>                                    
+                                    <!-- <li class="nav-item">
                                         <a class="dd-menu collapsed" href="javascript:void(0)" data-bs-toggle="collapse"
                                             data-bs-target="#submenu-1-1" aria-controls="navbarSupportedContent"
                                             aria-expanded="false" aria-label="Toggle navigation">Pages</a>
@@ -85,7 +91,7 @@
                                     </li>
                                     <li class="nav-item">
                                         <a href="contact.html" aria-label="Toggle navigation">Contact</a>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </div> <!-- navbar collapse -->
                             <div class="button">
@@ -142,16 +148,22 @@
             </div>
             <div class="row text-center">
                 <div class="col-lg-2 col-md-4 col-6 wow fadeInUp" data-wow-delay=".2s">
-                    <div class="category category-1 mx-auto mb-3"></div>
-                    <h5>Entertainment</h5>
+                    <a href="events.html?category=music"> <!-- Link to the events page with category query -->
+                        <div class="category category-1 mx-auto mb-3"></div>
+                        <h5>Music</h5>
+                    </a>
                 </div>
                 <div class="col-lg-2 col-md-4 col-6 wow fadeInUp" data-wow-delay=".4s">
+                    <a href="events.html?category=business"> <!-- Link to the events page with category query -->                    
                     <div class="category category-2 mx-auto mb-3"></div>
-                    <h5>Educational & Business</h5>
+                    <h5>Business</h5>
+                </a>                    
                 </div>
                 <div class=" col-lg-2 col-md-4 col-6 wow fadeInUp" data-wow-delay=".6s">
+                    <a href="events.html?category=sport"> <!-- Link to the events page with category query -->                            
                     <div class="category category-3 mx-auto mb-3"></div>
-                    <h5>Sports & Fitness</h5>
+                    <h5>Sports</h5>
+                </a>                     
                 </div>
                 <div class="col-lg-2 col-md-4 col-6 wow fadeInUp" data-wow-delay=".2s">
                     <div class="category category-4 mx-auto mb-3"></div>
@@ -562,7 +574,7 @@
                                 experience? Partner with us & get listed on Eventify</p>
                         </div>
                         <div class="button wow fadeInUp" data-wow-delay=".8s">
-                            <a href="javascript:void(0)" class="btn"><i class="bi bi-calendar-plus me-2"></i> Create
+                            <a href="./create.html" class="btn"><i class="bi bi-calendar-plus me-2"></i> Create
                                 Event</i></a>
                         </div>
                     </div>
