--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@
                             happening locally and globally.</h2>
                         <div class="input-group wow fadeInUp" data-wow-delay=".6s">
                             <span class="input-group-text" id="basic-addon1"><i class="bi bi-search"></i></span>
-                            <input type="text" class="form-control" placeholder="CMU Marathon, Music festival,..."
+                            <input id="searchInput" type="text" class="form-control" placeholder="CMU Marathon, Music festival,..."
                                 aria-label="Username" aria-describedby="basic-addon1">
                             <div class="input-group-text" id="basic-addon1">
                                 <i class="bi bi-geo-alt"></i>
@@ -698,6 +698,7 @@
     <script src="assets/js/count-up.min.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/js/feature_area.js"></script>
+    <script src="assets/js/main_search.js"></script>
 </body>
 
 </html>
