update catagory link

--- a/public/index.html
+++ b/public/index.html
@@ -157,25 +157,31 @@
                     <a href="events.html?category=business"> <!-- Link to the events page with category query -->                    
                     <div class="category category-2 mx-auto mb-3"></div>
                     <h5>Business</h5>
-                </a>                    
+                    </a>                    
                 </div>
                 <div class=" col-lg-2 col-md-4 col-6 wow fadeInUp" data-wow-delay=".6s">
                     <a href="events.html?category=sport"> <!-- Link to the events page with category query -->                            
                     <div class="category category-3 mx-auto mb-3"></div>
                     <h5>Sports</h5>
-                </a>                     
+                    </a>                     
                 </div>
                 <div class="col-lg-2 col-md-4 col-6 wow fadeInUp" data-wow-delay=".2s">
+                    <a href="events.html?category=cultural"> <!-- Link to the events page with category query -->                         
                     <div class="category category-4 mx-auto mb-3"></div>
                     <h5>Cultural & Arts</h5>
+                    </a>                      
                 </div>
                 <div class="col-lg-2 col-md-4 col-6 wow fadeInUp" data-wow-delay=".4s">
+                    <a href="events.html?category=technology"> <!-- Link to the events page with category query -->                     
                     <div class="category category-5 mx-auto mb-3"></div>
                     <h5>Technology & Innovation</h5>
+                    </a>                     
                 </div>
                 <div class=" col-lg-2 col-md-4 col-6 wow fadeInUp" data-wow-delay=".6s">
+                    <a href="events.html?category=travel"> <!-- Link to the events page with category query -->                      
                     <div class="category category-6 mx-auto mb-3"></div>
                     <h5>Travel & Adventure</h5>
+                    </a>                     
                 </div>
             </div>
             <div class="row d-none">
