--- a/public/events.html
+++ b/public/events.html
@@ -56,11 +56,11 @@
                                         <a href="./index.html" aria-label="Toggle navigation">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#" aria-label="Toggle navigation">Events</a>
+                                        <a href="#" class="active" aria-label="Toggle navigation">Events</a>
                                     </li>
                                     <li class="nav-item">
                                         <a href="./create.html" aria-label="Toggle navigation">Create event</a>
-                                    </li>                                      
+                                    </li>
                                     <!-- <li class="nav-item">
                                         <a class="dd-menu collapsed" href="javascript:void(0)" data-bs-toggle="collapse"
                                             data-bs-target="#submenu-1-1" aria-controls="navbarSupportedContent"
@@ -114,8 +114,9 @@
                         </h2>
                         <div class="input-group wow fadeInUp" data-wow-delay=".6s">
                             <span class="input-group-text" id="basic-addon1"><i class="bi bi-search"></i></span>
-                            <input id="searchInput" type="text" class="form-control" placeholder="CMU Marathon, Music festival,..."
-                                aria-label="Username" aria-describedby="basic-addon1">
+                            <input id="searchInput" type="text" class="form-control"
+                                placeholder="CMU Marathon, Music festival,..." aria-label="Username"
+                                aria-describedby="basic-addon1">
                             <div class="input-group-text" id="basic-addon1">
                                 <i class="bi bi-geo-alt"></i>
                                 <select class="form-select border-0 bg-transparent shadow-none">
