--- a/public/index.html
+++ b/public/index.html
@@ -59,44 +59,10 @@
                                     </li>
                                     <li class="nav-item">
                                         <a href="./create.html" aria-label="Toggle navigation">Create event</a>
-                                    </li>                                    
-                                    <!-- <li class="nav-item">
-                                        <a class="dd-menu collapsed" href="javascript:void(0)" data-bs-toggle="collapse"
-                                            data-bs-target="#submenu-1-1" aria-controls="navbarSupportedContent"
-                                            aria-expanded="false" aria-label="Toggle navigation">Pages</a>
-                                        <ul class="sub-menu collapse" id="submenu-1-1">
-                                            <li class="nav-item"><a href="about-us.html">About Us</a></li>
-                                            <li class="nav-item"><a href="gallery.html">Gallery</a></li>
-                                            <li class="nav-item"><a href="pricing.html">Pricing</a></li>
-                                            <li class="nav-item"><a href="sponsors.html">Sponsors</a></li>
-                                            <li class="nav-item"><a href="mail-success.html">Mail Success</a></li>
-                                            <li class="nav-item"><a href="404.html">404 Error</a></li>
-                                        </ul>
                                     </li>
-                                    <li class="nav-item">
-                                        <a href="about-us.html" aria-label="Toggle navigation">About Us</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="speakers.html" aria-label="Toggle navigation">Speakers</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="dd-menu collapsed" href="javascript:void(0)" data-bs-toggle="collapse"
-                                            data-bs-target="#submenu-1-2" aria-controls="navbarSupportedContent"
-                                            aria-expanded="false" aria-label="Toggle navigation">Blog</a>
-                                        <ul class="sub-menu collapse" id="submenu-1-2">
-                                            <li class="nav-item"><a href="blog-grid.html">Blog Grid</a>
-                                            </li>
-                                            <li class="nav-item"><a href="blog-single.html">Blog Single</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="contact.html" aria-label="Toggle navigation">Contact</a>
-                                    </li> -->
+
                                 </ul>
                             </div> <!-- navbar collapse -->
-                            <div class="button">
-                                <a href="pricing.html" class="btn">Get Tickets<i class="lni lni-ticket"></i></a>
-                            </div>
                         </nav>
                         <!-- End Navbar -->
                     </div>
@@ -116,8 +82,9 @@
                             happening locally and globally.</h2>
                         <div class="input-group wow fadeInUp" data-wow-delay=".6s">
                             <span class="input-group-text" id="basic-addon1"><i class="bi bi-search"></i></span>
-                            <input id="searchInput" type="text" class="form-control" placeholder="CMU Marathon, Music festival,..."
-                                aria-label="Username" aria-describedby="basic-addon1">
+                            <input id="searchInput" type="text" class="form-control"
+                                placeholder="CMU Marathon, Music festival,..." aria-label="Username"
+                                aria-describedby="basic-addon1">
                             <div class="input-group-text" id="basic-addon1">
                                 <i class="bi bi-geo-alt"></i>
                                 <select class="form-select border-0 bg-transparent shadow-none">
@@ -154,34 +121,34 @@
                     </a>
                 </div>
                 <div class="col-lg-2 col-md-4 col-6 wow fadeInUp" data-wow-delay=".4s">
-                    <a href="events.html?category=business"> <!-- Link to the events page with category query -->                    
-                    <div class="category category-2 mx-auto mb-3"></div>
-                    <h5>Business</h5>
-                    </a>                    
+                    <a href="events.html?category=business"> <!-- Link to the events page with category query -->
+                        <div class="category category-2 mx-auto mb-3"></div>
+                        <h5>Business</h5>
+                    </a>
                 </div>
                 <div class=" col-lg-2 col-md-4 col-6 wow fadeInUp" data-wow-delay=".6s">
-                    <a href="events.html?category=sport"> <!-- Link to the events page with category query -->                            
-                    <div class="category category-3 mx-auto mb-3"></div>
-                    <h5>Sports</h5>
-                    </a>                     
+                    <a href="events.html?category=sport"> <!-- Link to the events page with category query -->
+                        <div class="category category-3 mx-auto mb-3"></div>
+                        <h5>Sports</h5>
+                    </a>
                 </div>
                 <div class="col-lg-2 col-md-4 col-6 wow fadeInUp" data-wow-delay=".2s">
-                    <a href="events.html?category=cultural"> <!-- Link to the events page with category query -->                         
-                    <div class="category category-4 mx-auto mb-3"></div>
-                    <h5>Cultural & Arts</h5>
-                    </a>                      
+                    <a href="events.html?category=cultural"> <!-- Link to the events page with category query -->
+                        <div class="category category-4 mx-auto mb-3"></div>
+                        <h5>Cultural & Arts</h5>
+                    </a>
                 </div>
                 <div class="col-lg-2 col-md-4 col-6 wow fadeInUp" data-wow-delay=".4s">
-                    <a href="events.html?category=technology"> <!-- Link to the events page with category query -->                     
-                    <div class="category category-5 mx-auto mb-3"></div>
-                    <h5>Technology & Innovation</h5>
-                    </a>                     
+                    <a href="events.html?category=technology"> <!-- Link to the events page with category query -->
+                        <div class="category category-5 mx-auto mb-3"></div>
+                        <h5>Technology & Innovation</h5>
+                    </a>
                 </div>
                 <div class=" col-lg-2 col-md-4 col-6 wow fadeInUp" data-wow-delay=".6s">
-                    <a href="events.html?category=travel"> <!-- Link to the events page with category query -->                      
-                    <div class="category category-6 mx-auto mb-3"></div>
-                    <h5>Travel & Adventure</h5>
-                    </a>                     
+                    <a href="events.html?category=travel"> <!-- Link to the events page with category query -->
+                        <div class="category category-6 mx-auto mb-3"></div>
+                        <h5>Travel & Adventure</h5>
+                    </a>
                 </div>
             </div>
             <div class="row d-none">
