update event page category

--- a/public/events.html
+++ b/public/events.html
@@ -144,7 +144,7 @@
                 <span class="fs-5 fw-semibold">Filters</span>
             </a>
             <ul class="list-unstyled ps-0">
-                <li class="mb-1">
+                <!-- <li class="mb-1">
                     <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse"
                         data-bs-target="#home-collapse" aria-expanded="true">
                         Price
@@ -166,7 +166,7 @@
                         </ul>
                     </div>
                 </li>
-                <li class="border-top my-3"></li>
+                <li class="border-top my-3"></li> -->
                 <li class="mb-1">
                     <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse"
                         data-bs-target="#home-collapse-2" aria-expanded="true">
@@ -178,43 +178,43 @@
                                 <div class="link-dark rounded d-flex flex-row align-items-center gap-2 ms-4">
                                     <input class="form-check-input mt-0" type="checkbox" value=""
                                         aria-label="Checkbox for following text input" />
-                                    <span>Overview</span>
+                                    <span>Music</span>
                             </li>
                             <li>
                                 <div class="link-dark rounded d-flex flex-row align-items-center gap-2 ms-4">
                                     <input class="form-check-input mt-0" type="checkbox" value=""
                                         aria-label="Checkbox for following text input" />
-                                    <span>Overview</span>
+                                    <span>Business</span>
                             </li>
                             <li>
                                 <div class="link-dark rounded d-flex flex-row align-items-center gap-2 ms-4">
                                     <input class="form-check-input mt-0" type="checkbox" value=""
                                         aria-label="Checkbox for following text input" />
-                                    <span>Overview</span>
+                                    <span>Sport</span>
                             </li>
                             <li>
                                 <div class="link-dark rounded d-flex flex-row align-items-center gap-2 ms-4">
                                     <input class="form-check-input mt-0" type="checkbox" value=""
                                         aria-label="Checkbox for following text input" />
-                                    <span>Overview</span>
+                                    <span>Cultural & Arts</span>
                             </li>
                             <li>
                                 <div class="link-dark rounded d-flex flex-row align-items-center gap-2 ms-4">
                                     <input class="form-check-input mt-0" type="checkbox" value=""
                                         aria-label="Checkbox for following text input" />
-                                    <span>Overview</span>
+                                    <span>Technology & Innovation</span>
                             </li>
                             <li>
                                 <div class="link-dark rounded d-flex flex-row align-items-center gap-2 ms-4">
                                     <input class="form-check-input mt-0" type="checkbox" value=""
                                         aria-label="Checkbox for following text input" />
-                                    <span>Overview</span>
+                                    <span>Travel & Adventure</span>
                             </li>
                         </ul>
                     </div>
                 </li>
                 <li class="border-top my-3"></li>
-                <li class="mb-1">
+                <!-- <li class="mb-1">
                     <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse"
                         data-bs-target="#home-collapse-2" aria-expanded="true">
                         Date
@@ -259,7 +259,7 @@
                             </li>
                         </ul>
                     </div>
-                </li>
+                </li> -->
             </ul>
         </div>
 
