--- a/public/about-us.html
+++ b/public/about-us.html
@@ -333,7 +333,7 @@
                                     <input name="name" placeholder="Your Name*" required="required" type="text">
                                     <input name="email" placeholder="Email address*" required="required" type="email">
                                     <div class="button">
-                                        <button class="btn">Subscribe
+                                        <button class="btn text-white">Subscribe
                                         </button>
                                     </div>
                                 </form>
@@ -365,7 +365,7 @@
 
     <!-- ========================= scroll-top ========================= -->
     <a href="#" class="scroll-top">
-        <i class="lni lni-chevron-up"></i>
+        <i class="bi bi-arrow-up"></i>
     </a>
 
     <!-- ========================= JS here ========================= -->
