--- a/public/index.html
+++ b/public/index.html
@@ -89,9 +89,6 @@
                                 <i class="bi bi-geo-alt"></i>
                                 <select class="form-select border-0 bg-transparent shadow-none">
                                     <option selected>Chiand Mai</option>
-                                    <option value="1">One</option>
-                                    <option value="2">Two</option>
-                                    <option value="3">Three</option>
                                 </select>
                             </div>
                         </div>
@@ -210,7 +207,7 @@
                     <div class="section-title text-start">
                         <h3 class="wow zoomIn ms-4" data-wow-delay=".2s">Find the best in town</h3>
                         <h2 class="wow fadeInUp" data-wow-delay=".4s">Popular Events in Chiang Mai</h2>
-                        <h2 class="wow fadeInUp" data-wow-delay=".6s">
+                        <h2 class="wow fadeInUp d-flex flex-wrap gap-2" data-wow-delay=".6s">
                             <div class="eg-badge">All</div>
                             <div class="eg-badge">Today</div>
                             <div class="eg-badge">Tomorrow</div>
@@ -348,11 +345,6 @@
                     </div>
                 </div> -->
             </div>
-            <div class="text-center mt-4">
-                <div class="button wow zoomIn" data-wow-delay=".2s">
-                    <a href="javascript:void(0)" class="btn w-50">See more</i></a>
-                </div>
-            </div>
         </div>
     </section>
     <!-- /End Features Area -->
@@ -387,7 +379,7 @@
                     <div class="section-title text-start">
                         <h3 class="wow zoomIn ms-4" data-wow-delay=".2s">Find the best in town</h3>
                         <h2 class="wow fadeInUp" data-wow-delay=".4s">Trending Events in Chiang Mai</h2>
-                        <h2 class="wow fadeInUp" data-wow-delay=".6s">
+                        <h2 class="wow fadeInUp d-flex flex-wrap gap-2" data-wow-delay=".6s">
                             <div class="eg-badge">All</div>
                             <div class="eg-badge">Today</div>
                             <div class="eg-badge">Tomorrow</div>
@@ -525,11 +517,6 @@
                     </div>
                 </div> -->
             </div>
-            <div class="text-center mt-4">
-                <div class="button wow zoomIn" data-wow-delay=".2s">
-                    <a href="javascript:void(0)" class="btn w-50">See more</i></a>
-                </div>
-            </div>
         </div>
     </section>
     <!-- /End Features Area -->
@@ -630,7 +617,7 @@
                                     <input name="name" placeholder="Your Name*" required="required" type="text">
                                     <input name="email" placeholder="Email address*" required="required" type="email">
                                     <div class="button">
-                                        <button class="btn">Subscribe
+                                        <button class="btn text-white">Subscribe
                                         </button>
                                     </div>
                                 </form>
@@ -662,7 +649,7 @@
 
     <!-- ========================= scroll-top ========================= -->
     <a href="#" class="scroll-top">
-        <i class="lni lni-chevron-up"></i>
+        <i class="bi bi-arrow-up"></i>
     </a>
 
     <!-- ========================= JS here ========================= -->
