--- a/public/update.html
+++ b/public/update.html
@@ -60,40 +60,8 @@
                     <a href="./events.html" aria-label="Toggle navigation">Events</a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="active" aria-label="Toggle navigation">Create event</a>
+                    <a href="#" class="active" aria-label="Toggle navigation">Update event</a>
                   </li>
-                  <!-- <li class="nav-item">
-                                        <a class="dd-menu collapsed" href="javascript:void(0)" data-bs-toggle="collapse"
-                                            data-bs-target="#submenu-1-1" aria-controls="navbarSupportedContent"
-                                            aria-expanded="false" aria-label="Toggle navigation">Pages</a>
-                                        <ul class="sub-menu collapse" id="submenu-1-1">
-                                            <li class="nav-item"><a href="about-us.html">About Us</a></li>
-                                            <li class="nav-item"><a href="gallery.html">Gallery</a></li>
-                                            <li class="nav-item"><a href="pricing.html">Pricing</a></li>
-                                            <li class="nav-item"><a href="sponsors.html">Sponsors</a></li>
-                                            <li class="nav-item"><a href="mail-success.html">Mail Success</a></li>
-                                            <li class="nav-item"><a href="404.html">404 Error</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="about-us.html" aria-label="Toggle navigation">About Us</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="speakers.html" aria-label="Toggle navigation">Speakers</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="dd-menu collapsed" href="javascript:void(0)" data-bs-toggle="collapse"
-                                            data-bs-target="#submenu-1-2" aria-controls="navbarSupportedContent"
-                                            aria-expanded="false" aria-label="Toggle navigation">Blog</a>
-                                        <ul class="sub-menu collapse" id="submenu-1-2">
-                                            <li class="nav-item"><a href="blog-grid.html">Blog Grid</a>
-                                            </li>
-                                            <li class="nav-item"><a href="blog-single.html">Blog Single</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="contact.html" aria-label="Toggle navigation">Contact</a>
-                                    </li> -->
                 </ul>
               </div>
             </nav>
@@ -279,7 +247,7 @@
   <script src="assets/js/wow.min.js"></script>
   <script src="assets/js/count-up.min.js"></script>
   <script src="assets/js/main.js"></script>
-  <script src="assets/js/create.js"></script>
+  <script src="assets/js/update.js"></script>
 </body>
 
 </html>
