fix: Fix update function bug

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
                                         <a href="./events.html" aria-label="Toggle navigation">Events</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="./create.html" aria-label="Toggle navigation">Create event</a>
+                                        <a href="./create.html" aria-label="Toggle navigation">Create Event</a>
                                     </li>
 
                                 </ul>
@@ -561,23 +561,6 @@
                                 </div>
                                 <p>A business conference organize by EventGrids In. World’s most influential media,
                                     entertainment & technology.</p>
-                                <span class="social-title">
-                                    Follow Us On:
-                                </span>
-                                <ul class="social">
-                                    <li>
-                                        <a href="javascript:void(0)"><i class="lni lni-facebook-filled"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="javascript:void(0)"><i class="lni lni-twitter-filled"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="javascript:void(0)"><i class="lni lni-instagram-filled"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="javascript:void(0)"><i class="lni lni-linkedin-original"></i></a>
-                                    </li>
-                                </ul>
                             </div>
                             <!-- End Single Widget -->
                         </div>
