--- a/public/update.html
+++ b/public/update.html
@@ -60,7 +60,7 @@
                     <a href="./events.html" aria-label="Toggle navigation">Events</a>
                   </li>
                   <li class="nav-item">
-                    <a href="#" class="active" aria-label="Toggle navigation">Update event</a>
+                    <a href="./create.html" aria-label="Toggle navigation">Create Event</a>
                   </li>
                 </ul>
               </div>
@@ -77,7 +77,7 @@
 
   <!-- Start Hero Area -->
   <section class="createForm container wow fadeInUp" data-wow-delay=".2s">
-    <h2>Create Event</h2>
+    <h2>Update Event</h2>
     <form id="eventForm">
       <h3 class="h3">Event Detail</h3>
       <div class="form-detail mb-3 col-lg-8">
@@ -99,8 +99,8 @@
         <input type="datetime-local" class="form-control" name="startDate" id="startDate" required />
       </div>
       <div class="form-detail mb-3 col-lg-8">
-        <label for="endDate" class="form-label">End Date <span class="text-danger">*</span></label>
-        <input type="datetime-local" class="form-control" name="endDate" id="endDate" required />
+        <label for="endDate" class="form-label">End Date</label>
+        <input type="datetime-local" class="form-control" name="endDate" id="endDate" />
       </div>
       <div class="form-detail mb-3 col-lg-8">
         <label for="location" class="form-label">Location</label>
@@ -127,7 +127,7 @@
       </div>
       <div class="form-detail">
         <button type="submit" class="button my-4">
-          <i class="bi bi-calendar-plus me-2"></i>Create Event
+          <i class="bi bi-calendar-plus me-2"></i>Update Event
         </button>
       </div>
     </form>
@@ -153,21 +153,6 @@
                   A business conference organize by EventGrids In. World’s
                   most influential media, entertainment & technology.
                 </p>
-                <span class="social-title"> Follow Us On: </span>
-                <ul class="social">
-                  <li>
-                    <a href="javascript:void(0)"><i class="lni lni-facebook-filled"></i></a>
-                  </li>
-                  <li>
-                    <a href="javascript:void(0)"><i class="lni lni-twitter-filled"></i></a>
-                  </li>
-                  <li>
-                    <a href="javascript:void(0)"><i class="lni lni-instagram-filled"></i></a>
-                  </li>
-                  <li>
-                    <a href="javascript:void(0)"><i class="lni lni-linkedin-original"></i></a>
-                  </li>
-                </ul>
               </div>
               <!-- End Single Widget -->
             </div>
