--- a/public/events.html
+++ b/public/events.html
@@ -59,7 +59,7 @@
                                         <a href="#" class="active" aria-label="Toggle navigation">Events</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="./create.html" aria-label="Toggle navigation">Create event</a>
+                                        <a href="./create.html" aria-label="Toggle navigation">Create Event</a>
                                     </li>
                                 </ul>
                             </div> <!-- navbar collapse -->
@@ -304,23 +304,6 @@
                                     influential
                                     media,
                                     entertainment & technology.</p>
-                                <span class="social-title">
-                                    Follow Us On:
-                                </span>
-                                <ul class="social">
-                                    <li>
-                                        <a href="javascript:void(0)"><i class="lni lni-facebook-filled"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="javascript:void(0)"><i class="lni lni-twitter-filled"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="javascript:void(0)"><i class="lni lni-instagram-filled"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="javascript:void(0)"><i class="lni lni-linkedin-original"></i></a>
-                                    </li>
-                                </ul>
                             </div>
                             <!-- End Single Widget -->
                         </div>
