--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
                             <div class="input-group-text" id="basic-addon1">
                                 <i class="bi bi-geo-alt"></i>
                                 <select class="form-select border-0 bg-transparent shadow-none">
-                                    <option selected>Chiand Mai</option>
+                                    <option selected>Chiang Mai</option>
                                 </select>
                             </div>
                         </div>
