fix: Overlapping bug
- bring sidebar menu on events page  to behind navigation bar

--- a/public/events.html
+++ b/public/events.html
@@ -207,7 +207,7 @@
 
             <div class="d-flex justify-content-end align-items-center wow fadeInUp" data-wow-delay=".2s">
 
-                <div class="position-absolute d-md-none" style="z-index: 99; left: 0;">
+                <div class="position-absolute d-md-none" style="left: 0;">
                     <button class="filter-btn btn navbar-toggler" data-bs-toggle="collapse" data-bs-target="#testBar"
                         aria-expanded="true">
                         <i class="bi bi-filter-circle h1 text-white m-0 p-0"></i></button>
@@ -215,7 +215,7 @@
 
                 <div id="testBar"
                     class="position-absolute d-md-none collapse navbar-collapse w-75 sidebar-container border-1 flex-shrink-0 bg-white rounded-3"
-                    style="left: 0; top: 3rem; z-index: 99;">
+                    style="left: 0; top: 3rem; z-index: 10;">
                     <div
                         class="d-flex align-items-center pb-1 pb-md-3 mb-1 mb-md-3 link-dark text-decoration-none border-bottom">
                         <span class="fs-5 fw-semibold">Filters</span>
